--- a/app.css
+++ b/app.css
@@ -1,44 +1,372 @@
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+ body{
+  font-family: nyt-imperial,georgia,'times new roman',times,serif;
+ }
+ nav {
+  position: sticky; 
+  top: 0;  
+  padding: 3px 1px ;
+  display: grid;
+  grid-template-areas: 'menu logo profile';
+  grid-template-columns:1fr 2fr 1fr; 
+  grid-gap: 1em;
+  justify-items: center;
+  align-items: center;  
+  background-color: white; 
+  border-bottom: 0.2px solid rgb(224, 224, 224);
+
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+.left-nav {
+  grid-area:menu;     
+  display: grid;
+  
+  grid-template-columns:2fr 2fr 8fr; 
+  justify-content: space-around;
+  justify-items: center;
+  align-items: center;  
+  grid-gap: 10px;
+  
+  
 }
-body {
-	line-height: 1;
+.space-cosmos{
+  padding-left: 10px;;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: black;
+  text-decoration: none;
+  font-size: 0.8em;
 }
-ol, ul {
-	list-style: none;
+.logo-nav {
+  grid-area:logo;
 }
-blockquote, q {
-	quotes: none;
+.right-nav {
+  grid-area:profile;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+.right-nav > button {
+  border-radius: 3px;
+  cursor: pointer;
+  font-family: nyt-franklin,helvetica,arial,sans-serif;
+  -webkit-transition: ease 0.6s;
+  transition: ease 0.6s;
+  white-space: nowrap;
+  vertical-align: middle;
+  background-color: #567b95;
+  border: 1px solid #326891;
+  color: #fff;
+  font-size: 11px;
+  line-height: 11px;
+  font-weight: 700;
+  -webkit-letter-spacing: 0.05em;
+  -moz-letter-spacing: 0.05em;
+  -ms-letter-spacing: 0.05em;
+  letter-spacing: 0.05em;
+  padding: 11px 12px 8px;
+  text-transform: uppercase;
 }
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+.main-header{
+  flex-direction: row;
+  height: 100%;
+  width: 945px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+  .title {
+    width: 100%;
+    max-width: 1000px;
+    margin: 50px auto;
+    text-align: center;
+   
+}
+.title > h1{
+  color: #121212;
+  font-family: nyt-cheltenham,georgia,'times new roman',times,serif;
+  font-weight: 700;
+  font-style: italic;
+  font-size: 1.9375rem;
+  line-height: 2.25rem;
+  margin: 0 20px 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  
+  
+}
+
+.sharing-links > ul > li {
+  display: inline;
+  color: #999;
+  margin-right: 1rem;
+  width: 100%;
+}
+
+.sharing-links {
+  width: 500px;
+  padding-top: 1.25rem;
+  border-top: 1px solid #ebebeb;
+  margin: 25px auto;
+}
+.sharing-links > ul {
+  position: relative;
+  left: -95px;
+}
+.sharing-links .share-item-svg {
+  display: inline-block;
+  background-color: #eee;
+  border: 1px solid #eee;
+  border-radius: 100%;
+  padding: 5px;
+  height: 30px;
+  width: 30px;
+}
+
+.sharing-links ul > li > a:hover .share-item-svg {
+  background-color: #fff;
+}
+#comment-615 {
+  top: 5px;
+  position: relative;
+}
+#comment-615 >img {
+  width: 1.5em;
+}
+#comment-615 > span {
+  font-size: 0.7em;
+  color: black;
+  position: absolute;
+  top: -6px;
+  left: 4px;
+ 
+}
+figure { 
+  text-align: left;
+}
+figcaption {
+  font-size: 1em;
+  padding-top: 20px;
+  color:rgb(124, 121, 121)
+
+}
+figcaption > span {
+  font-size: 0.7em;
+}
+.author {
+  width: 600px;
+  margin: 0 auto 1.25rem;
+  color: #121212;
+  font-family: Helvetica, Arial, sans-serif;
+  padding: 5px;
+}
+.author > h2 {
+  font-weight: bold;
+}
+.author > p {
+  font-size: 0.8em;
+}
+.author > * {
+  padding: 10px;
+}
+.main-elements {
+  width: 1110px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 20px;
+}
+
+.flex-story{
+  margin-left: calc((100% - 600px) / 2);
+  margin-right: 0;
+  width: 600px; 
+  font-size: 23px;
+
+ 
+  color:rgb(54, 53, 53);
+}
+.flex-story > p {
+  line-height: 27px;
+}
+.flex-story >p:first-child{
+  margin-bottom: 30px;
+}
+.story-sign-up{
+  display: flex;  
+  padding: 15px 0px;
+  border-top: 1px solid #ebebeb;
+}
+
+.story-beggining{
+  flex-basis:250px;
+  flex-grow: 6;
+}
+.story-beggining-button{
+  flex-grow: 1;
+  
+}
+.story-beggining-button > button {
+  
+  border-radius: 2px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  background-color: white;
+  color: black;
+  box-shadow: none;
+  font-size: 13px;  
+  font-weight: bold;
+  padding: 4px 12px;
+ 
+}
+.story-beggining > span {
+  font-weight: bold;
+  font-size: 16px;
+}
+.story-beggining > p {
+  display: inline;
+  font-size: 14px;
+  font-style: italic;  
+}
+.adv {    
+  display: block;
+  margin: 2.5rem 0;
+  padding: .75rem 0 1.875rem;
+  text-align: center;
+  width: 100%;
+  height: 270px;
+  background-color: rgb(219, 216, 216);
+  border-bottom: 1px solid rgb(243, 243, 243);
+  border-top: 1px solid rgb(243, 243, 243);
+}
+.subscribe-times{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  
+}
+.subscribe-times > *{
+  justify-self: center;
+  align-self: center;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1rem;
+  
+}
+
+.subscribe-times-border{
+  border-bottom: 1px solid rgb(204, 204, 204);
+  width: 72px;
+  padding-top: 15px;
+  margin: 0px auto 1.125rem;
+}
+aside {
+    position: absolute;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;    
+    flex-direction: column;
+    right: 24rem;  
+    width: auto;     
+}
+aside > .aside-first {
+  border-bottom: 1px solid rgb(204, 204, 204);
+}
+aside > .aside-first > h2 {
+  font-weight: bold;
+  font-size: 14px;
+}
+aside > * {
+  margin: 5px;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-self: center;
+  align-content: center; 
+  font-size: 14px;
+}
+aside > * > p {
+  
+  justify-self: center;
+  align-self: center;
+}
+aside img {
+  width: 70px;
+  height: 70px;
+  padding-right: 10px;
+}
+.theory{
+  width: 1000px;
+  margin: 50px auto;
+
+ 
+}
+.theory span {
+  font-weight: bold;
+  padding-right: 10px;
+}
+.theory > h2 {
+ font-weight: bold;
+ font-size: 20px;
+ padding-bottom: 5px;
+}
+.theory > p {
+  font-size: 15px;
+  color:rgb(116, 113, 113);
+  padding-bottom: 5px;
+}
+.theory > img {  
+  position: absolute;
+  height: auto;
+  width: 900px; 
+  z-index: -1;
+  
+}
+.theory-grid{
+  margin-top: 65px;
+  height: 550px;
+  width: 900px;
+  font-size: 14px;
+  display: grid;
+  align-content: space-around;
+  
+  
+  
+  
+}
+.theory-grid > * {
+  
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  
+  
+ 
+}
+.theory-grid-child > * {
+  line-height: 16px;
+  padding: 5px;
+}
+.theory-footer {
+  position: relative;  
+  font-size: 15px;
+}
+.theory-footer::before{  
+    content : "";
+    position: absolute;    
+    height  : 1px;
+    width   : 8%;  /* or 100px */
+    top: -20px;
+    border-top:2px solid rgb(27, 27, 27);    
+  }
+  .pole {
+    
+    width: 700px;
+    height: auto;
+  }
+  .pole > figure {
+    margin-left: -100px;
+  }
+  .pole figcaption {
+    font-size: 18px;
+   
+  }
