--- a/app.css
+++ b/app.css
@@ -135,8 +135,7 @@
   color: black;
   position: absolute;
   top: -6px;
-  left: 4px;
- 
+  left: 4px; 
 }
 figure { 
   text-align: left;
@@ -177,9 +176,7 @@ figcaption > span {
   margin-left: calc((100% - 600px) / 2);
   margin-right: 0;
   width: 600px; 
-  font-size: 23px;
-
- 
+  font-size: 23px; 
   color:rgb(54, 53, 53);
 }
 .flex-story > p {
@@ -360,13 +357,184 @@ aside img {
   }
   .pole {
     
-    width: 700px;
+    width: 650px;
     height: auto;
+    margin-bottom: 35px;
   }
   .pole > figure {
     margin-left: -100px;
   }
   .pole figcaption {
-    font-size: 18px;
-   
+    margin-top: -15px;
+    font-size: 18px;   
+    color: rgb(54, 53, 53);
   }
+  .pole figcaption > span {
+    font-size: 14px;
+    color: rgb(97, 95, 95);
+    
+  }
+  #special {
+    font-weight: bold;
+  }
+  .flex-story-footer{
+    border-bottom: 1px solid black;
+  }
+  .flex-story-footer > p {
+    font-size: 12px;
+    margin-bottom: 20px;
+  }
+  .story-footer-social  {
+    display: flex; 
+    flex-direction: row;   
+    height: 100px;
+    justify-content: center;
+    align-content: center;
+   
+    
+  }
+  .story-footer-social button {
+    display: flex;
+    flex: 1 1 300px;    
+    justify-self: end;
+    align-self: center;
+    border-radius: 3px;
+    cursor: pointer;        
+    font-family: nyt-franklin,helvetica,arial,sans-serif;
+    -webkit-transition: ease 0.6s;
+    transition: ease 0.6s;   
+    background-color: #567b95;
+    border: 1px solid #326891;
+    color: #fff;
+    font-size: 13px;
+    line-height: 14px;
+    font-weight: 700;
+    -webkit-letter-spacing: 0.05em;
+    -moz-letter-spacing: 0.05em;
+    -ms-letter-spacing: 0.05em;
+    letter-spacing: 0.05em;
+    padding: 10px 90px 8px;
+    text-transform: uppercase;
+  }
+  .story-footer-social .sharing-links-footer {
+    display: flex;
+    flex: 1 1 200px;           
+  }
+  .ul-flex {
+    display: flex;
+  }
+.ul-flex li {
+  align-self: center;
+  justify-self: center;
+  padding-left: 20px;
+}
+.sharing-links-footer .share-item-svg {
+  display: inline-block;
+  background-color: #eee;
+  border: 1px solid #eee;
+  border-radius: 100%;
+  padding: 5px;
+  height: 30px;
+  width: 30px;
+} 
+#footer-comment-615 {
+  top: 5px;
+  position: relative;
+}
+#footer-comment-615 >img {
+  width: 1.5em;
+}
+#footer-comment-615 > span {
+  font-size: 0.7em;
+  color: black;
+  position: absolute;
+  top: 6px;
+  left: 25px; 
+}
+footer {
+  border-top: 5px double #e2e2e2;
+  width: 1200px;
+  margin: 35px auto;
+  padding-top: 15px;
+}
+.footer-header {
+  display: flex;
+  flex: wrap;
+  
+}
+.footer-header a {
+  display: flex;
+  width: 800px;
+  justify-content: end;
+  text-decoration: none;
+  font-size: 10px;
+  color: rgb(118, 118, 158);
+}
+.logo-nav {
+  display: flex;
+  width: 400px;
+  justify-content: start;
+}
+.all-links a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.all-links {
+  display: inline-flex;
+  gap: 3rem;
+  padding-bottom: .5rem;
+  border-bottom: 1px solid rgb(226, 226, 226);
+}
+
+.all-links_grid,
+.subscribe {
+  font-family: 'Libre Franklin', helvetica, arial, sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1.625;
+  margin-top: 1rem;
+}
+
+.all-links .all-links_grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-column-gap: 3rem;
+}
+
+.all-links_grid > ul > h3,
+.subscribe > ul> h3 {
+  font-size: 13px;
+  font-weight: 700;
+  color: rgb(51, 51, 51);
+  margin-bottom: .625rem;
+}
+
+.all-links .subscribe {
+  padding-left: 1rem;
+  border-left: 1px solid rgb(226, 226, 226);
+}
+
+.all-links .subscribe .subscribe_svg {
+  display: inline-block;
+  height: 13px;
+  width: 13px;
+  margin-right: 7px;
+  vertical-align: middle;
+}
+
+.all-links .subscribe ul:nth-child(2),
+.all-links .subscribe ul:nth-child(3) {
+  font-size: 11px;
+  padding-top: 1rem;
+  line-height: 2.1;
+}
+
+.all-links .subscribe ul:first-child > li {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.all-links .subscribe ul:nth-child(3) {
+  border-top: 1px solid rgb(226, 226, 226);
+}
